@@ -1,3 +1,8 @@
+Sun Jan 27 13:42:31 GMT 2008  Colin Watson  <cjwatson@debian.org>
+
+	* lib/pipeline.c (pipeline_join): Initialise source, buffer, buflen,
+	  bufmax, line_cache, and peek_offset.
+
 Sun Jan 27 13:37:17 GMT 2008  Colin Watson  <cjwatson@debian.org>
 
 	* lib/pipeline.h (struct pipeline): Add ignore_signals member.
